[gd_scene load_steps=3 format=1]

[ext_resource path="res://item_box.gd" type="Script" id=1]
[ext_resource path="res://textures/userinterface/singlesquareui.png" type="Texture" id=2]

[node name="item_box" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 50.0
margin/bottom = 50.0
script/script = ExtResource( 1 )

[node name="boxTexture" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 50.0
margin/bottom = 50.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="itemTexture" type="TextureFrame" parent="boxTexture"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 2.0
margin/top = 2.0
margin/right = 48.0
margin/bottom = 48.0
expand = true
stretch_mode = 0

[node name="item_count" type="Label" parent="boxTexture"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 31.0
margin/top = 36.0
margin/right = 50.0
margin/bottom = 50.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.0273438, 0.0267029, 0.0267029, 1 )
text = "##"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="descPanel" type="PanelContainer" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 61.0
margin/top = 59.0
margin/right = 275.0
margin/bottom = 189.0

[node name="Label" type="Label" parent="descPanel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 7.0
margin/top = 58.0
margin/right = 207.0
margin/bottom = 72.0
text = "Test"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


